force-app/main/default/objects/Cloudrop__Global_Sender__c/Cloudrop__Global_Sender__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Global Sender</label>
</CustomObject>