force-app/main/default/objects/Cloudrop__Global_Sender__c/fields/Cloudrop__Default__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Default__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is to declare the default sender.</description>
    <label>Default</label>
    <type>Checkbox</type>
</CustomField>