force-app/main/default/objects/Cloudrop__Global_Sender__c/fields/Cloudrop__From_Address__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__From_Address__c</fullName>
    <label>From Address</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>