force-app/main/default/objects/Cloudrop__Global_Sender__c/fields/Cloudrop__Reply_To__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Reply_To__c</fullName>
    <label>Reply To</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>