force-app/main/default/objects/Cloudrop__Global_Sender__c/fields/Cloudrop__Sender_Name__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Sender_Name__c</fullName>
    <label>Sender Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>